ChannelSplitter.channelInterpretation = 'discrete'

The channelInterprtation for a ChannelSplitterNode should be
'discrete', not 'speakers', and cannot be changed.

Update tests to verify this.

Bug: 795586
Test: constructors/channelsplitter.html
Change-Id: Icc909ff0ce8652d6fc63b367129da032182f03f2
Reviewed-on: https://chromium-review.googlesource.com/833008
Reviewed-by: Hongchan Choi <hongchan@chromium.org>
Commit-Queue: Raymond Toy <rtoy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527052}
Former-commit-id: 3e186bcbdb3b5bc1eb70e132a02776a1fa8241aa